# impl

./: CMakeLists.txt  README.md  trials.cpp
include/ddw/: impl.hpp
test/: CMakeLists.txt  perftest.cpp  specials.cpp
test/failures/: CMakeLists.txt  fail1.cpp  fail10.cpp  fail2.cpp  fail3.cpp  fail4.cpp  fail5.cpp  fail6.cpp  fail7.cpp  fail8.cpp  fail9.cpp
test/include/: fifo.h
test/readme-examples/: CMakeLists.txt  expected.txt  orig.cpp  sol1.cpp  sol2.cpp
